--- a/assents/styles/global.css
+++ b/assents/styles/global.css
@@ -1,8 +1,34 @@
 @import url("./header.css");
 @import url("./banner.css");
+@import url("./area1.css");
+@import url("./area2.css");
+@import url("./area3.css");
+@import url("./area4.css");
+@import url("./footer.css");
 body{
     background-color: #f0f0f5;
     padding: 0;
     margin: 0;
     font-family: "Open Sans", sans-serif;
+}
+h2{
+        font-family: "Oswald", sans-serif;
+        font-weight: bold;
+        font-size: 40px;
+        line-height: 45px;
+        margin: 20px 0;
+}
+q{
+    margin: 30px 0;
+}
+.button{
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    background-color: transparent;
+    transition: all 0.4s;
+    border-radius: 3px;
+}
+.button:hover{
+    background-color: #454545;
+    color: #fff;
 }
